# roguelike

./: .cursorignore  .cursorrules  .flake8  .gitignore  .isort.cfg  CONTRIBUTING-jp.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README-jp.md  README.md  pyproject.toml
docs/: manual-jp.md  manual.md
src/roguelike/: __main__.py  main.py
src/roguelike/core/: constants.py  engine.py  event.py
src/roguelike/data/: save_manager.py
src/roguelike/game/: achievements.py  actions.py
src/roguelike/game/actions/: __init__.py  base.py  handler.py  item.py  movement.py  stairs.py  use_item.py
src/roguelike/game/quests/: __init__.py  balancer.py  difficulty_adjuster.py  generator.py  progress.py  progress_manager.py  progress_view.py  quests.py  recommendation.py  save_manager.py  statistics.py  types.py  visualizer.py
src/roguelike/game/states/: dungeon_state.py  game_state.py  player_state.py  state_manager.py
src/roguelike/game/systems/: combat.py
src/roguelike/ui/: message_log.py  screen_manager.py
src/roguelike/ui/elements/: base.py  effects_panel.py  equipment_panel.py  status_panel.py
src/roguelike/ui/handlers/: input_handler.py  inventory_handler.py
src/roguelike/ui/layouts/: game_layout.py
src/roguelike/ui/renderer/: __init__.py  game_renderer.py
src/roguelike/ui/screens/: achievements_screen.py  game_screen.py  inventory_screen.py  quantity_selector.py  quest_screen.py  recovery_screen.py  save_load_screen.py
src/roguelike/utils/: event_logger.py  game_logger.py  logger.py  logging.py  notification.py  serialization.py
src/roguelike/world/entity/: ai.py  components.py  factory.py  inventory.py  item_functions.py  systems.py
src/roguelike/world/entity/components/: base.py  equipment.py  identification.py  serializable.py
src/roguelike/world/entity/prefabs/: armor.py  food_ration.py  healing_potion.py  items.py  monsters.py  player.py  scroll.py  shield.py  weapon.py
src/roguelike/world/map/: dungeon.py  game_map.py  map_manager.py  room.py  tile.py  tiles.py
src/roguelike/world/map/generator/: dungeon_generator.py
src/roguelike/world/spawner/: spawner.py
tests/: conftest.py  test_dungeon_generator.py  test_game_state.py  test_input_handler.py  test_notification.py  test_serialization.py
