[tool.poetry]
name = "roguelike"
version = "0.1.0"
description = "A modern Rogue-like game"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "roguelike", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
tcod = "^16.2.3"
tcod-ecs = "^5.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
roguelike = "roguelike.main:main" 