[tool.poetry]
name = "roguelike"
version = "0.1.0"
description = "A modern roguelike game"
authors = ["yuru-sha"]
license = "MIT"
readme = "README.md"
packages = [{include = "roguelike", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
tcod = "16.2.2"
esper = "2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
roguelike = "roguelike.main:main" 